# math

./: .gitignore  CMakeLists.txt  README.md  codegen.sh  doxygen.cfg  import.sh
debian/: control
include/automy/math/: Math2D.h  Math3D.h  Matrix.h  Matrix.hpp  Matrix2d.h  Matrix2d.hpp  Matrix3d.h  Matrix3d.hpp  Matrix3f.hpp  Matrix4d.h  Matrix4d.hpp  Matrix4f.h  Matrix4f.hpp  MatrixX.h  MatrixX.hpp  MatrixXd.h  MatrixXd.hpp  MatrixXf.h  MatrixXf.hpp  Util.h  Vector2d.h  Vector2d.hpp  Vector2f.h  Vector2f.hpp  Vector2i.h  Vector2i.hpp  Vector3d.h  Vector3d.hpp  Vector3f.h  Vector3f.hpp  Vector3i.h  Vector3i.hpp  Vector4d.h  Vector4d.hpp  Vector4f.h  Vector4f.hpp  Vector4i.h  Vector4i.hpp  Vector4uc.h  Vector4uc.hpp  (+1 more)
include/math/: Math2D.h  Math3D.h  Matrix.h  Matrix2d.h  Matrix3d.h  Matrix4d.h  Matrix4f.h  MatrixX.h  MatrixXd.h  MatrixXf.h  Util.h  Vector2d.h  Vector2f.h  Vector2i.h  Vector3d.h  Vector3f.h  Vector3i.h  Vector4d.h  Vector4f.h  Vector4i.h  Vector4uc.h
interface/: package.vni
src/: MatrixXd.cpp  MatrixXf.cpp
